[gd_scene load_steps=22 format=3 uid="uid://dunsjy0e6r37a"]

[ext_resource type="Script" path="res://Tiles/skull_switch.gd" id="1_m4mvk"]
[ext_resource type="AudioStream" uid="uid://c6iipfrjpw3bf" path="res://Assets/Sounds/sfx/effect_death.wav" id="2_hhjqm"]
[ext_resource type="Texture2D" uid="uid://cssc22wddrc4e" path="res://Assets/Graphics/sprites/sprites_other.png" id="3_halsg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fqmyr"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1u4re"]
size = Vector2(48, 48)

[sub_resource type="Animation" id="Animation_fir26"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/AnimatedSprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/AnimatedSprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D/AnimatedSprite2D:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node2D/AnimatedSprite2D:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node2D/AnimatedSprite2D:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Node2D/AnimatedSprite2D:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node2D/AnimatedSprite2D:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Node2D/AnimatedSprite2D:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Node2D/AnimatedSprite2D:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_6nr0q"]
resource_name = "destroyed"
length = 0.8
step = 0.01
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/AnimatedSprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.11, 28, 96, -0.09, -49, 0.0865265, 68, 192, -0.113474, -8, 0.25, 0),
"times": PackedFloat32Array(0, 0.25, 0.8)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/AnimatedSprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.05, -55, -96, -0.17, 15, 0.15, 14, -64, -0.08, -15, 0.25, 0),
"times": PackedFloat32Array(0, 0.25, 0.8)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D/AnimatedSprite2D:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.25, 0.8)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node2D/AnimatedSprite2D:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.25, 0.8)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node2D/AnimatedSprite2D:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.25, 0.8)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Node2D/AnimatedSprite2D:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.25, 0.8)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node2D/AnimatedSprite2D:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.25, 0.8)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Node2D/AnimatedSprite2D:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.25, 0.8)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Node2D/AnimatedSprite2D:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.36, 6, 6.28319, -0.12, -0.283185, 0.25, 0),
"times": PackedFloat32Array(0, 0.8)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eo4wb"]
_data = {
"RESET": SubResource("Animation_fir26"),
"destroyed": SubResource("Animation_6nr0q")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ot4fj"]
atlas = ExtResource("3_halsg")
region = Rect2(128, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcyth"]
atlas = ExtResource("3_halsg")
region = Rect2(192, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_strb8"]
atlas = ExtResource("3_halsg")
region = Rect2(256, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_64iq2"]
atlas = ExtResource("3_halsg")
region = Rect2(320, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_olf0f"]
atlas = ExtResource("3_halsg")
region = Rect2(384, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_abbyy"]
atlas = ExtResource("3_halsg")
region = Rect2(448, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1kxn"]
atlas = ExtResource("3_halsg")
region = Rect2(512, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8pxi"]
atlas = ExtResource("3_halsg")
region = Rect2(576, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_788ub"]
atlas = ExtResource("3_halsg")
region = Rect2(640, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ej7p"]
atlas = ExtResource("3_halsg")
region = Rect2(704, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p21yp"]
atlas = ExtResource("3_halsg")
region = Rect2(128, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5rxw"]
atlas = ExtResource("3_halsg")
region = Rect2(768, 768, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_bd3tn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ot4fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcyth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_strb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64iq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olf0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abbyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1kxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8pxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_788ub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ej7p")
}],
"loop": true,
"name": &"destroyed",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p21yp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5rxw")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}]

[node name="skull_switch" type="CharacterBody2D" groups=["skull_switch"]]
z_index = 1
collision_layer = 0
script = ExtResource("1_m4mvk")
collectibleAmount = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_fqmyr")

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_1u4re")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_eo4wb")
}

[node name="break_bonusBox" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_hhjqm")

[node name="Node2D" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -7)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Node2D"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_bd3tn")
animation = &"idle"
frame_progress = 0.244073

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
modulate = Color(1, 1, 1, 0.0980392)
rect = Rect2(-500, -500, 1000, 1000)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="offScreen_load"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="offScreen_unload"]
